# EarningsEdgeDetection

./: .env  .gitignore  bot.py  earnings_scanner.py  env.example  forward_volatility_scanner.py  pyproject.toml  scanner_base.py
cli_scanner/: backfill_iv_fields.py  backtest.py  bot.py  calendar_call_backtest.py  check_cached.py  check_dedup.py  check_final.py  check_iv_fields.py  check_optimization.py  check_pending.py  check_sigma_mapping.py  check_status.py  collect.py  dashboard.py  find_test_tickers.py  fix_iv_mapping.py  outcomes.py  polygon_backfill.py  polygon_iv_backfill.py  polygon_rv_backfill.py  pyproject.toml  requirements.txt  run-bot.sh  run.sh  run_backtest_train.sh  scanner.py  test_polygon_backfill.py  train.py  train_calendar_filter.py  train_option_models.py
cli_scanner/core/: analyzer.py  scanner.py
cli_scanner/data/: earnings_ml.db  earnings_ml.db.dedup.bak  forward_volatility_results.feather  subscribers.json
cli_scanner/earnings_edge/: __init__.py  alpaca_bridge.py  alpaca_trading.py  analyzer.py  base.py  bot_scanner.py  browser.py  calendar_filter.py  calendar_spread.py  config.py  db.py  discord_webhook.py  earnings.py  forward_volatility.py  iron_fly.py  models.py  multi_strike.py  multi_strike_real.py  positional_strategies.py  scanner.py  settings.py  strategies.py  validator.py  yfinance_patch.py
cli_scanner/scripts/: backfill_options_chains.py  check_cached.py  check_dedup.py  check_final.py  check_iv_fields.py  check_optimization.py  check_pending.py  check_sigma_mapping.py  check_status.py  collect_options_snapshot.py  (+5 more)
(+82 files in other folders)
